@@ -15,8 +15,6 @@
     <allure.version>2.30.0</allure.version>
     <allure-maven.version>2.12.0</allure-maven.version>
     <aspectj.version>1.9.21</aspectj.version>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -37,14 +35,6 @@
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
       <version>6.0.0</version>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
-    <dependency>
-      <groupId>io.rest-assured</groupId>
-      <artifactId>json-schema-validator</artifactId>
-      <version>6.0.0</version>
-      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -85,6 +75,14 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>5.10.0</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.39.0</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -137,20 +135,11 @@
                     <argLine>
                         -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                         -Dfile.encoding=UTF-8
-                        --add-opens java.base/sun.misc=ALL-UNNAMED
                     </argLine>
-                    <parallel>all</parallel>
-                    <threadCount>1</threadCount>
                     <systemPropertyVariables>
                         <allure.results.directory>target/allure-results</allure.results.directory>
                     </systemPropertyVariables>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>3.2.5</version>
             </plugin>
         </plugins>
     </build>
